--- a/application-test/Makefile
+++ b/application-test/Makefile
@@ -30,12 +30,12 @@ CFLAGS   += -ffreestanding  -nostartfiles -nostdlib -nodefaultlibs
 LDFLAGS  +=
 LDFLAGS  += -Wl,--gc-sections -Wl,-T,$(LDFILE)
 
-TARGET_NAME = riscv-console-example
+TARGET_NAME = application-test
 
 TARGET_OBJS =   $(OBJ_DIR)/main.o               \
                 $(OBJ_DIR)/crt0.o               \
-                $(OBJ_DIR)/interrupt.o          \
-                $(OBJ_DIR)/startup.o            
+                $(OBJ_DIR)/startup.o             \
+                $(OBJ_DIR)/interrupt.o
 
 all: directories $(BIN_DIR)/$(TARGET_NAME)
 
