--- a/os-base/Makefile
+++ b/os-base/Makefile
@@ -30,9 +30,9 @@ CFLAGS   += -ffreestanding  -nostartfiles -nostdlib -nodefaultlibs
 LDFLAGS  +=
 LDFLAGS  += -Wl,--gc-sections -Wl,-T,$(LDFILE)
 
-TARGET_NAME = riscv-console-example
+TARGET_NAME = ghostOS
 
-TARGET_OBJS =   $(OBJ_DIR)/main.o               \
+TARGET_OBJS = 	$(OBJ_DIR)/main.o               \
                 $(OBJ_DIR)/crt0.o               \
                 $(OBJ_DIR)/interrupt.o          \
                 $(OBJ_DIR)/startup.o            
@@ -48,6 +48,9 @@ $(OBJ_DIR)/%.o: $(SRC_DIR)/%.s
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $(DEFINES) $(INCLUDE) -c $< -o $@
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+	$(CXX) $(CFLAGS) $(DEFINES) $(INCLUDE) -c $< -o $@
 	
 directories: $(OBJ_DIR) $(BIN_DIR)
 
