Systems calls added. Not working in cart yet. Why?

--- a/application-test/Makefile
+++ b/application-test/Makefile
@@ -13,6 +13,9 @@ INC_DIR = ./include
 SRC_DIR = ./src
 OBJ_DIR = ./obj
 BIN_DIR = ./bin
+GHOST_LIB_DIR = ./../lib/bin
+GHOST_LIB_INC_DIR = ./../lib/include/
+LIB_OBJS_DIR = ./../lib/obj/
 
 DEBUG_MODE=TRUE
 
@@ -20,15 +23,20 @@ ifdef DEBUG_MODE
 DEFINES  += -DDEBUG
 CFLAGS   += -O0 -g -ggdb
 #LDFLAGS  += -Wl,-no_pie
+LIBFLAGS +=
+LIB_OBJS =    $(LIB_OBJS_DIR)/GraphicUtil.o       \
+			  $(LIB_OBJS_DIR)/SystemUtil.o
 else 
 CFLAGS   += -O3
+LIBFLAGS = -L$(GHOST_LIB_DIR) -lghostutil
 endif
 
 LDFILE   = riscv32-console.ld
-INCLUDE  += -I $(INC_DIR)
+INCLUDE  += -I $(INC_DIR) -I $(GHOST_LIB_INC_DIR)
 CFLAGS   += -ffreestanding  -nostartfiles -nostdlib -nodefaultlibs
 LDFLAGS  +=
 LDFLAGS  += -Wl,--gc-sections -Wl,-T,$(LDFILE)
+
 
 TARGET_NAME = application-test
 
@@ -40,8 +48,8 @@ TARGET_OBJS =   $(OBJ_DIR)/main.o               \
 
 all: directories $(BIN_DIR)/$(TARGET_NAME)
 
-$(BIN_DIR)/$(TARGET_NAME): $(TARGET_OBJS)
-	$(CC) $(TARGET_OBJS) -o $(BIN_DIR)/$(TARGET_NAME) $(CFLAGS) $(DEFINES) $(LDFLAGS) 
+$(BIN_DIR)/$(TARGET_NAME): $(LIB_OBJS) $(TARGET_OBJS)
+	$(CC) $(TARGET_OBJS) $(LIB_OBJS) $(LIBFLAGS) -o $(BIN_DIR)/$(TARGET_NAME) $(CFLAGS) $(DEFINES) $(LDFLAGS) 
 	$(STRIP) $(BIN_DIR)/$(TARGET_NAME) -o $(BIN_DIR)/$(TARGET_NAME).strip
 
 $(OBJ_DIR)/%.o: $(SRC_DIR)/%.s
