--- a/os-base/Makefile
+++ b/os-base/Makefile
@@ -42,7 +42,8 @@ STARTUP_OBJS = 	$(OBJ_DIR)/main.o               \
                 $(OBJ_DIR)/InterruptHandler.o   \
                 $(OBJ_DIR)/TimerISR.o           \
                 $(OBJ_DIR)/ThreadsASM.o         \
-                $(OBJ_DIR)/ThreadsC.o
+                $(OBJ_DIR)/ThreadsC.o           \
+                $(OBJ_DIR)/Sleep.o
 
 SYSCALL_OBJS =  $(OBJ_DIR)/Syscalls.o
 
