--- a/application-test/Makefile
+++ b/application-test/Makefile
@@ -35,7 +35,8 @@ endif
 
 LDFILE   = riscv32-console.ld
 INCLUDE  += -I $(INC_DIR) -I $(GHOST_LIB_INC_DIR)
-CFLAGS   += -ffreestanding  -nostartfiles -nostdlib -nodefaultlibs
+CFLAGS   += -ffreestanding  -nostartfiles
+# CFLAGS   += -ffreestanding  -nostartfiles -nostdlib -nodefaultlibs
 LDFLAGS  +=
 LDFLAGS  += -Wl,--gc-sections -Wl,-T,$(LDFILE)
 
@@ -47,7 +48,8 @@ LIB_TARGETS = library
 TARGET_OBJS =   $(OBJ_DIR)/main.o               \
                 $(OBJ_DIR)/crt0.o               \
                 $(OBJ_DIR)/interrupt.o          \
-                $(OBJ_DIR)/startup.o             
+                $(OBJ_DIR)/startup.o            \
+                $(OBJ_DIR)/sbrk.o   
 
 ALL_OBJS = $(LIB_OBJS) $(TARGET_OBJS)            
 
